put the new fonts in
one of them doesnt work sadly so we looking for a new serif one

--- a/Starterkit/src/assets/scss/tailwind/_custom.scss
+++ b/Starterkit/src/assets/scss/tailwind/_custom.scss
@@ -16,7 +16,7 @@ pre {
 }
 
 html {
-  @apply font-inter scroll-smooth text-start;
+  @apply font-equilibrist scroll-smooth text-start;
 }
 html {
   &[dir="rtl"] {
@@ -24,7 +24,7 @@ html {
   }
 }
 body {
-  @apply scroll-smooth bg-bodybg h-full text-defaulttextcolor dark:text-white m-0 font-inter font-normal text-[0.813rem] relative text-start rtl:dir-rtl;
+  @apply scroll-smooth bg-bodybg h-full text-defaulttextcolor dark:text-white m-0 font-equilibrist font-normal text-[0.813rem] relative text-start rtl:dir-rtl;
 }
 
 .page {
