--- a/Starterkit/src/assets/css/style.css
+++ b/Starterkit/src/assets/css/style.css
@@ -103,10 +103,10 @@ Background Image
 
 -------------------*/
 /* Start FontFamily Styles */
-/* inter */
+/* inter
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap");
 /* Montserrat */
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600&display=swap"); */
 /* End Tailwind Styles Styles */
 @import url("../iconfonts/RemixIcons/fonts/remixicon.css");
 @import url("../iconfonts/tabler-icons/iconfont/tabler-icons.css");
@@ -117,6 +117,25 @@ Background Image
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face{
+  font-family: "SerifRegular";
+  src: local("EquilibristRegular"),
+    url("./fonts/Equilibrist\ Light.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "SerifBold";
+  src: local("EquilibristBold"),
+    url("./fonts/Equilibrist\ Bold.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "SansRegular";
+  src: local("Opsilon"),
+    url("./fonts/Opsilon.ttf") format("truetype");
+}
+
 :root {
   --body-bg: 240 241 247;
   --primary: 132 90 223;
@@ -4489,7 +4508,7 @@ label {
 }
 
 .app-sidebar {
-  @apply w-[15rem] h-full bg-[#111c43] dark:bg-bodybg border-e border-e-white/10 fixed top-0 start-0 font-Montserrat z-[49] transition-all ease-linear duration-[0.05s];
+  @apply w-[15rem] h-full bg-[#111c43] dark:bg-bodybg border-e border-e-white/10 fixed top-0 start-0 font-opsilon z-[49] transition-all ease-linear duration-[0.05s];
 }
 .app-sidebar .main-sidebar-header {
   @apply h-[3.75rem] w-[15rem] fixed flex  dark:bg-bodybg z-[9] items-center justify-center py-[0.813rem] px-5 border-b border-b-white/10 border-e border-e-white/10 transition-all ease-linear duration-[0.05s];
@@ -16275,7 +16294,7 @@ pre {
 }
 
 html {
-  @apply font-inter scroll-smooth text-start;
+  @apply font-equilibrist scroll-smooth text-start;
 }
 
 html[dir="rtl"] {
@@ -16283,7 +16302,7 @@ html[dir="rtl"] {
 }
 
 body {
-  @apply scroll-smooth bg-bodybg h-full text-defaulttextcolor dark:text-white m-0 font-inter font-normal text-[0.813rem] relative text-start rtl:dir-rtl;
+  @apply scroll-smooth bg-bodybg h-full text-defaulttextcolor dark:text-white m-0 font-equilibrist font-normal text-[0.813rem] relative text-start rtl:dir-rtl;
 }
 
 .page {
