the problem didnt come from the font, its elsewhere

--- a/Starterkit/src/assets/css/style.css
+++ b/Starterkit/src/assets/css/style.css
@@ -121,13 +121,13 @@ Background Image
 @font-face{
   font-family: "SerifRegular";
   src: local("EquilibristRegular"),
-    url("./fonts/Equilibrist\ Light.ttf") format("truetype");
+    url("./fonts/EquilibristLight.ttf") format("truetype");
 }
 
 @font-face {
   font-family: "SerifBold";
   src: local("EquilibristBold"),
-    url("./fonts/Equilibrist\ Bold.ttf") format("truetype");
+    url("./fonts/EquilibristBold.ttf") format("truetype");
 }
 
 @font-face {
